--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "docs": "compodoc -p src/tsconfig.app.json -d docs",
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
     "prepush": "npm run lint:ci",
-    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s"
+    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
+    "cy:open:config1": "npx cypress open --env login=maysalexandr@gmail.com,password=123456",
+    "cy:open:config": "npx cypress open --env login=$LOGIN,password=$PASSWORD"
   },
   "dependencies": {
     "@agm/core": "^1.1.0",
@@ -95,6 +97,7 @@
     "cypress": "^13.1.0",
     "cypress-xpath": "^2.0.1",
     "husky": "0.13.3",
+    "moment": "^2.29.4",
     "npm-run-all": "4.0.2",
     "rimraf": "2.6.1",
     "run-script-os": "^1.1.6",
