--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
     "prepush": "npm run lint:ci",
     "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
-    "cy:open:config1": "npx cypress open --env login=maysalexandr@gmail.com,password=123456",
-    "cy:open:config": "npx cypress open --env login=$LOGIN,password=$PASSWORD"
+    "cypress:run": "npm run prereport; npx cypress run --spec cypress/e2e/dateTest.spec.js,cypress/e2e/hw.spec.js; npm run generate:report",
+    "generate:report": "npx mochawesome-merge \"cypress/results/*.json\" > mochawesome.json && npx marge mochawesome.json",
+    "cypress:e2e": "start-test start http-get://localhost:4200/ cypress:run",
+    "delete:reports": "rimraf cypress/results/* || true",
+    "delete:merged": "rimraf mochawesome.json || true",
+    "prereport": "npm run delete:reports && npm run delete:merged"
   },
   "dependencies": {
     "@agm/core": "^1.1.0",
@@ -97,10 +101,14 @@
     "cypress": "^13.1.0",
     "cypress-xpath": "^2.0.1",
     "husky": "0.13.3",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
     "moment": "^2.29.4",
     "npm-run-all": "4.0.2",
     "rimraf": "2.6.1",
     "run-script-os": "^1.1.6",
+    "start-server-and-test": "^2.0.1",
     "stylelint": "7.13.0",
     "ts-node": "9.1.1",
     "tslint": "^6.1.3",
