--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,14 @@
-name: Demo Workflow
+name: Testing Workflow
 on: workflow_dispatch
 jobs:
-  print:
+  testing:
     runs-on: ubuntu-latest
+    container: sitespeedio/webbrowsers:chrome-118.0-firefox-118.0-edge-117.0
     steps:
-      - name: Print to console
-        run: echo Hello GH Actions!
-      - name: Print to console
-        run: echo Hello GH Actions Again!
+      - name: Get the code
+        uses: actions/checkout@v4
+      - name: Project dependencies install
+        run: npm i --force
+      - name: Run tests
+        run: npm run cypress:e2e
+
