--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Testing Workflow
 on: workflow_dispatch
 jobs:
-  testing:
+  preparing:
     runs-on: ubuntu-latest
     container:
       image: cypress/browsers:node-20.6.1-chrome-116.0.5845.187-1-ff-117.0-edge-116.0.1938.76-1
@@ -9,8 +9,20 @@ jobs:
     steps:
       - name: Get the code
         uses: actions/checkout@v4
+      - name: Cahce deps
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: node-modules-${{hashFiles('**/package-lock.json')}}
       - name: Project dependencies install
         run: npm i --force
+  testing:
+    needs: preparing
+    runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:node-20.6.1-chrome-116.0.5845.187-1-ff-117.0-edge-116.0.1938.76-1
+      options: --user 1001
+    steps:
       - name: Run tests
         run: npm run cypress:e2e
 
