--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: Testing Workflow
 on: workflow_dispatch
 jobs:
-  preparing:
+  testing:
+    continue-on-error: true
     runs-on: ubuntu-latest
     container:
       image: cypress/browsers:node-20.6.1-chrome-116.0.5845.187-1-ff-117.0-edge-116.0.1938.76-1
@@ -16,13 +17,6 @@ jobs:
           key: node-modules-${{hashFiles('**/package-lock.json')}}
       - name: Project dependencies install
         run: npm i --force
-  testing:
-    needs: preparing
-    runs-on: ubuntu-latest
-    container:
-      image: cypress/browsers:node-20.6.1-chrome-116.0.5845.187-1-ff-117.0-edge-116.0.1938.76-1
-      options: --user 1001
-    steps:
       - name: Run tests
         run: npm run cypress:e2e
 
