--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
     "prepush": "npm run lint:ci",
     "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
-    "cypress:run": "npm run prereport; npx cypress run --spec cypress/e2e/dateTest.spec.js --browser chrome; npm run generate:report",
+    "cypress:run": "npm run prereport && npx cypress run --spec cypress/e2e/dateTest.spec.js,cypress/e2e/hw.spec.js --browser chrome",
     "generate:report": "npx mochawesome-merge \"cypress/results/*.json\" > mochawesome.json && npx marge mochawesome.json",
     "cypress:e2e": "start-test start http-get://localhost:4200/ cypress:run",
+    "cypress:ci": "npm run cypress:e2e; npm run generate:report",
     "delete:reports": "rimraf cypress/results/* || true",
     "delete:merged": "rimraf mochawesome.json || true",
-    "prereport": "npm run delete:reports && npm run delete:merged"
+    "delete:html": "rimraf mochawesome-report || true",
+    "prereport": "npm run delete:reports && npm run delete:merged && npm run delete:html"
   },
   "dependencies": {
     "@agm/core": "^1.1.0",
