--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,16 @@
 name: Testing Workflow
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - '.github/workflows/*'
+  pull_request:
+    types: [opened, edited, reopened]
+env:
+
+
 jobs:
   testing:
     continue-on-error: true
@@ -18,6 +29,18 @@ jobs:
       - name: Project dependencies install
         run: npm i --force
       - name: Run tests
-        run: |
-          npm run cypress:e2e
+        run: npm run cypress:ci
+      - name: Save test report
+        uses: actions/upload-artifact@v3
+        with:
+          path: mochawesome-report
+          name: Test Report
+      - name: Get test report
+        uses: actions/download-artifact@v3
+        with:
+          name: Test Report
+
+
+
+
 
