--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,6 @@ on:
 jobs:
   testing:
     runs-on: ubuntu-latest
-    continue-on-error: true
     container:
       image: cypress/browsers:node-20.6.1-chrome-116.0.5845.187-1-ff-117.0-edge-116.0.1938.76-1
       options: --user 1001
@@ -31,6 +30,7 @@ jobs:
         run: npm run cypress:e2e
       - name: Generating report
         run: npm run generate:report
+        if: failure() || success()
       - name: Save test report
         uses: actions/upload-artifact@v3
         with:
