--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,9 @@ on:
     branches:
       - main
     paths-ignore:
-      - '.github/workflows/*'
+      - ".github/workflows/*"
   pull_request:
     types: [opened, edited, reopened]
-
 
 jobs:
   testing:
@@ -36,12 +35,12 @@ jobs:
         with:
           path: mochawesome-report
           name: Test Report
+        if: failure() || success()
+  report_downloading:
+    runs-on: ubuntu-latest
+    needs: testing
+    steps:
       - name: Get test report
         uses: actions/download-artifact@v3
         with:
           name: Test Report
-
-
-
-
-
