--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,16 @@ on:
   pull_request:
     types: [opened, edited, reopened]
 
+env:
+  NODE_ENV: production
+  GH_SECRET: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   testing:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     container:
       image: cypress/browsers:node-20.6.1-chrome-116.0.5845.187-1-ff-117.0-edge-116.0.1938.76-1
       options: --user 1001
