fix npm command

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,6 @@ jobs:
       - name: Install dependencies
         run: npm install --force
       - name: Run tests
-        run: nmp run cypress:e2e
+        run: npm run cypress:e2e
         
         
