--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,8 @@ on: workflow_dispatch
 jobs:
   testing:
     runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:node-20.6.1-chrome-116.0.5845.187-1-ff-117.0-edge-116.0.1938.76-1
     steps:
       - name: Get the project code
         uses: actions/checkout@v4
@@ -11,5 +13,3 @@ jobs:
         run: npm install --force
       - name: Run tests
         run: npm run cypress:e2e
-        
-        
