added a new job

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     types: [opened, edited, reopened]
 
+env:
+  APP_VER: production
+
 jobs:
   testing:
     runs-on: ubuntu-latest
@@ -20,7 +23,34 @@ jobs:
       - name: Install dependencies
         run: npm install --force
       - name: Run tests
-        run: npm run cypress:e2e
+        run: |
+          npm run cypress:e2e
+          echo ${{ secrets.MY_SECRET }}
+      - name: Generate reports
+        run: npm run generate:report
+        if: failure() || success()
+      - name: Save test report
+        uses: actions/upload-artifact@v3
+        with:
+          path: mochawesome-report
+          name: Test Report
+        if: failure() || success()
+      - name: Get test report
+        uses: actions/download-artifact@v3
+        with:
+          name: Test Report
+        if: failure() || success()
+  testing2:
+    runs-on: windows-latest
+    steps:
+      - name: Get the project code
+        uses: actions/checkout@v4
+      - name: Install dependencies
+        run: npm install --force
+      - name: Run tests
+        run: |
+          npm run cypress:e2e
+          echo ${{ secrets.MY_SECRET }}
       - name: Generate reports
         run: npm run generate:report
         if: failure() || success()
