--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
+    "cypress-plugin-snapshots": "^1.4.4",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.0",
     "intl": "1.2.5",
@@ -92,6 +93,8 @@
     "@angular/language-service": "8.0.0",
     "@compodoc/compodoc": "^1.1.11",
     "@fortawesome/fontawesome-free": "^5.2.0",
+    "@percy/cli": "^1.27.3",
+    "@percy/cypress": "^3.1.2",
     "@types/d3-color": "1.0.5",
     "@types/geojson": "7946.0.8",
     "@types/googlemaps": "^3.30.4",
