Adding a new workflow

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
     "prepush": "npm run lint:ci",
     "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
-    "cypress:run": "npm run prereport && npx cypress run --spec cypress/e2e/ci/** --record --key ${RECORD_KEY} --browser chrome --parallel",
+    "cypress:run": "npm run prereport && npx cypress run --spec cypress/e2e/ci/** --browser chrome",
     "generate:report": "npx mochawesome-merge \"cypress/results/*.json\" > mochawesome.json && npx marge mochawesome.json",
     "cypress:e2e": "start-test start http-get://localhost:4200/ cypress:run",
     "delete:reports": "rimraf cypress/results/* || true",
@@ -65,6 +65,7 @@
     "cypress-plugin-snapshots": "^1.4.4",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.0",
+    "express": "^4.18.2",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
