--- a/.github/workflows/test_with_docker_client.yml
+++ b/.github/workflows/test_with_docker_client.yml
@@ -18,8 +18,10 @@ jobs:
     services:
       cypress-with-browser:
         image: cypress/browsers:node-20.6.1-chrome-116.0.5845.187-1-ff-117.0-edge-116.0.1938.76-1
+        options: --user 1001
       angular-client:
         image: mayalex/test_app_build:1.0.1
+        options: --user 1001
         ports:
           - 4200:5001
           - user:1001
