--- a/.github/workflows/test_with_docker_client.yml
+++ b/.github/workflows/test_with_docker_client.yml
@@ -15,15 +15,14 @@ env:
 jobs:
   testing1:
     runs-on: ubuntu-latest
+    container: ubuntu
     services:
       cypress-with-browser:
         image: cypress/browsers:node-20.6.1-chrome-116.0.5845.187-1-ff-117.0-edge-116.0.1938.76-1
       angular-client:
         image: mayalex/test_app_build:1.0.1
         ports:
-          - 127.0.0.1:4200:5001
-    container:
-      image: cypress/browsers:node-20.6.1-chrome-116.0.5845.187-1-ff-117.0-edge-116.0.1938.76-1
+          - 4200:5001
     steps:
       - name: Add env vars
         run: export RECORD_KEY=${{env.RECORD_KEY}}
